<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="background"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <Button
        android:id="@+id/button_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:text="@string/help"
        android:textSize="@dimen/txt_size" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/txt_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/records"
                android:textColor="@color/red_color"
                android:textSize="@dimen/txt_size" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickStartGameHandler"
                android:text="@string/easy"
                android:textSize="@dimen/txt_size" />

            <TextView
                android:id="@+id/textView_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onResetRecordHandler"
                android:text="TextView"
                android:textColor="@color/green_color"
                android:textSize="@dimen/txt_size" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickStartGameHandler"
                android:text="@string/standard"
                android:textSize="@dimen/txt_size" />

            <TextView
                android:id="@+id/textView_standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onResetRecordHandler"
                android:text="TextView"
                android:textColor="@color/green_color"
                android:textSize="@dimen/txt_size" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_professional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickStartGameHandler"
                android:text="@string/professional"
                android:textSize="@dimen/txt_size" />

            <TextView
                android:id="@+id/textView_professional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onResetRecordHandler"
                android:text="TextView"
                android:textColor="@color/green_color"
                android:textSize="@dimen/txt_size" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_easy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />

</RelativeLayout>